WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18508
SquirrelFish crashes due to bad scope chain on some SunSpider tests
https://bugs.webkit.org/show_bug.cgi?id=18508
Summary
SquirrelFish crashes due to bad scope chain on some SunSpider tests
Maciej Stachowiak
Reported
2008-04-15 01:07:59 PDT
Some SunSpider tests (3d-raytrace, string-unpack-code) crash due to keeping around a ScopeChain* that points into the register file, but the register file can move in memory when it grows.
Attachments
the fix
(26.86 KB, patch)
2008-04-15 01:46 PDT
,
Maciej Stachowiak
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2008-04-15 01:09:44 PDT
A possible solution is to pass around ScopeChainNode* instead.
Maciej Stachowiak
Comment 2
2008-04-15 01:46:08 PDT
Created
attachment 20548
[details]
the fix
Oliver Hunt
Comment 3
2008-04-15 01:54:59 PDT
Comment on
attachment 20548
[details]
the fix r=me
Cameron Zwarich (cpst)
Comment 4
2008-04-24 17:52:43 PDT
Landed in
r31897
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug