JavaScriptCore/kjs/object.h
@@ -546,19 +546,6 @@ ALWAYS_INLINE bool JSObject::getOwnPropertySlot(ExecState* exec, const Identifie
     return false;
 }
 
-inline void ScopeChain::release()
-{
-    // This function is only called by deref(),
-    // Deref ensures these conditions are true.
-    ASSERT(_node && _node->refCount == 0);
-    ScopeChainNode *n = _node;
-    do {
-        ScopeChainNode *next = n->next;
-        delete n;
-        n = next;
-    } while (n && --n->refCount == 0);
-}
-
 inline JSValue* JSObject::toPrimitive(ExecState* exec, JSType preferredType) const
 {
     return defaultValue(exec, preferredType);
